src/test/ui/wf/wf-struct-field.stderr
error[E0277]: the trait bound `A: std::marker::Copy` is not satisfied
  --> $DIR/wf-struct-field.rs:12:5
   |
LL | struct IsCopy<T:Copy> {
   | --------------------- required by `IsCopy`
...
LL | struct SomeStruct<A> {
   |                   - help: consider restricting this bound: `A: std::marker::Copy`
LL |     data: IsCopy<A>
   |     ^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `A`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
